<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/fragment_profile_container"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="85dp"
        android:gravity="center"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageButton_avatar"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:gravity="center_vertical"
            android:src="@mipmap/avatar_icon"/>

        <LinearLayout
            android:id="@+id/layout_profile_name"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/imageButton_avatar"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_username"
                android:text="@string/empty_string"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:gravity="center_vertical"/>

            <TextView
                android:id="@+id/textView_is_log_in"
                android:text="@string/not_log_in"
                android:textSize="12sp"
                android:layout_width="100dp"
                android:layout_height="0dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:gravity="left"/>

        </LinearLayout>

        <!--personal profile view click-->
        <TextView
            android:id="@+id/textview_personal_profile"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/my_personal_profile"
            android:layout_gravity="end"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="30dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"/>



    </RelativeLayout>



    <android.support.v7.widget.GridLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:grid="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop = "5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        grid:alignmentMode="alignBounds"
        grid:columnOrderPreserved="false"
        grid:rowCount="6"
        grid:columnCount="2">

        <!--send cards title-->
        <Button
            android:id="@+id/btn_sent_cards"
            android:background="@drawable/button_border"
            android:text="@string/number_of_sent_cards"
            android:textSize="@dimen/general_text_size"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            grid:layout_row="0"
            grid:layout_column="0"
            grid:layout_columnSpan="2"/>

        <!--send cards arrive title-->
        <Button

            android:layout_height="40dp"
            android:background="@drawable/button_border"
            android:text="@string/number_of_cards_arrived"
            android:textSize="@dimen/general_text_size"
            android:gravity="center"
            grid:layout_row="1"
            grid:layout_column="0"
            grid:layout_columnWeight="0.5"/>

        <!--send cards travel title-->
        <Button
            android:layout_height="40dp"
            android:background="@drawable/button_border"
            android:text="@string/number_of_cards_traveling"
            android:textSize="@dimen/general_text_size"
            android:gravity="center"
            grid:layout_row="1"
            grid:layout_column="1"
            grid:layout_columnWeight="0.5"/>

        <!--sent cards-arrived-->
        <Button
            android:id="@+id/btn_sent_cards_arrived_value"
            android:layout_height="40dp"
            android:background="@drawable/button_border"
            android:text="-1"
            android:textSize="@dimen/general_text_size"
            android:gravity="center"
            grid:layout_row="2"
            grid:layout_column="0"
            grid:layout_columnWeight="0.5"
            grid:layout_columnSpan="1"
            />

        <!--sent cards-travellling-->
        <Button
            android:id="@+id/btn_sent_cards_travelling_value"
            android:layout_height="40dp"
            android:background="@drawable/button_border"
            android:text="-1"
            android:textSize="@dimen/general_text_size"
            android:gravity="center"
            grid:layout_row="2"
            grid:layout_column="1"
            grid:layout_columnWeight="0.5"
            grid:layout_columnSpan="1"
            />


        <!--received card title total-->
        <Button
            android:id="@+id/btn_begged_cards"
            android:background="@drawable/button_border"
            android:text="@string/number_of_received_cards"
            android:textSize="@dimen/general_text_size"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            grid:layout_row="3"
            grid:layout_column="0"
            grid:layout_columnSpan="2"/>

        <!--received card title-->
        <Button
            android:background="@drawable/button_border"
            android:text="@string/number_of_cards_arrived"
            android:textSize="@dimen/general_text_size"
            android:layout_height="40dp"
            grid:layout_row="4"
            grid:layout_column="0"
            grid:layout_columnWeight="0.5"/>

        <!--received card title-->
        <Button
            android:background="@drawable/button_border"
            android:text="@string/number_of_cards_traveling"
            android:textSize="@dimen/general_text_size"
            android:layout_height="40dp"
            grid:layout_row="4"
            grid:layout_column="1"
            grid:layout_columnWeight="0.5"/>

        <!--recived cards-travellling-->

        <Button
            android:id="@+id/btn_received_cards_arrived_value"
            android:background="@drawable/button_border"
            android:text="-1"
            android:textSize="@dimen/general_text_size"
            android:layout_height="40dp"
            grid:layout_row="5"
            grid:layout_column="0"
            grid:layout_columnWeight="1"/>

        <!--recived cards-travellling-->
        <Button
            android:id="@+id/btn_received_cards_travelling_value"
            android:background="@drawable/button_border"
            android:text="-1"
            android:textSize="@dimen/general_text_size"
            android:layout_height="40dp"
            grid:layout_row="5"
            grid:layout_column="1"
            grid:layout_columnWeight="1"/>

    </android.support.v7.widget.GridLayout>

    <Button
        android:id="@+id/btn_setting"
        android:background="@drawable/button_border"
        android:text="@string/action_settings"
        android:textSize="@dimen/general_text_size"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        />

</LinearLayout>