<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_margin="5dp"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.guanghuiz.exchangecard.UI.ProfileActivity"
    tools:showIn="@layout/activity_profile">

    <ImageView
        android:id="@+id/profile_btn_avatar"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="5dp"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/avatar_icon"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/profile_text_username_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name_title"
            android:minHeight="30dp"
            android:minWidth="50dp"/>

        <TextView
            android:id="@+id/profile_text_usernamee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_string"
            android:minHeight="30dp"
            android:minWidth="50dp"/>

    </LinearLayout>

    <!--<include android:id="@+id/content_edit_address"-->
        <!--layout="@layout/content_edit_address"-->
             <!--android:layout_width= "match_parent"-->
             <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@id/profile_text_username_title"/>-->

    <LinearLayout
        android:id="@+id/content_edit_address"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:orientation="vertical">

        <!--mail address, title-->
        <TextView
            android:text="@string/text_mailaddress_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"/>

        <!--text, name-->
        <TextView
            android:id="@+id/text_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType=""
            android:minHeight="20dp"
            android:layout_marginTop="5dp"/>

        <!--text, address-->
        <TextView
            android:id="@+id/text_address"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="20dp"
            android:layout_marginTop="5dp"/>

        <!--text, postcode-->
        <TextView
            android:id="@+id/text_postcode"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:minHeight="20dp"/>
    </LinearLayout>

</LinearLayout>
